--- a/frontend/src/orderForm/scss/orderStyles.scss
+++ b/frontend/src/orderForm/scss/orderStyles.scss
@@ -1,2 +1,14 @@
 @import "bootstrap/scss/bootstrap";
 
+.redbox {
+    background-color: red;
+}
+
+.bluebox {
+    background-color: blue;
+}
+
+.sidebar {
+    max-width: 250px;
+    border-right: 5px solid blue;
+}
