--- a/frontend/src/scss/styles.scss
+++ b/frontend/src/scss/styles.scss
@@ -1,73 +1,26 @@
-// 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
-@import "bootstrap/scss/functions";
+// Custom.scss
+// Option A: Include all of Bootstrap
 
-// 2. Include any default variable overrides here
+// Include any default variable overrides here (though functions won't be available)
 
+@import "../node_modules/bootstrap/scss/bootstrap";
 
-// 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
-@import "bootstrap/scss/variables";
+// Then add additional custom code here
 
-// 4. Include any default map overrides here
-
-// 5. Include remainder of required parts
-@import "bootstrap/scss/maps";
-@import "bootstrap/scss/mixins";
-@import "bootstrap/scss/root";
-
-//Include all of Bootstrap to recompile everything before use
-@import "bootstrap/scss/bootstrap";
-
-//custom styles
-.hidden-md {
-    display: none;
+button.navbar-toggler {
+    box-shadow: none !important;
 }
 
-//display smaller logo from the medium breakpoint down 
-@include media-breakpoint-down(md) {
-    .hidden-md {
-        display: block;
-    }
-
-    a.navbar-brand.pe-4 {
-        padding-right: 0% !important;
-        margin-right: 0% !important;
-    }
+button.navbar-toggler:hover {
+    border: .125rem solid $gray-600;
 }
 
-.navbar {
-    border-bottom: 1px solid #BBBBBB;
+.card {
+    box-shadow: 0 2px 6px 0 $gray-500;
+    max-width: 460px;
+    min-width: 300px;
 }
 
-.nav-link {
-    font-weight: bold;
-    font-size: 14px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #031D44;
-    padding: 20px 0px;
-    margin: 0px 20px;
-    display: inline-block;
-    position: relative;
-    opacity: 0.75;
-}
-
-.nav-link:hover {
-    opacity: 1;
-}
-
-.nav-link::before {
-    transition: 300ms;
-    height: 5px;
-    content: "";
-    position: absolute;
-    background-color: #031D44;
-}
-
-.nav-link-ltr::before {
-    width: 0%;
-    bottom: 10px;
-}
-
-.nav-link-ltr:hover::before {
-    width: 100%;
+.card img {
+    max-height: 250px;
 }
