--- a/frontend/src/scss/styles.scss
+++ b/frontend/src/scss/styles.scss
@@ -22,17 +22,12 @@ h6.card-subtitle {
     align-items: center;
 }
 
-.row {
-    margin: 0;
-}
-
 .card {
     box-shadow: 0 2px 6px 0 $gray-500;
 }
 
 .card.order-card {
-    max-width: 342px !important;
-    flex-basis: 100%;
+    flex-basis: 100% !important;
 }
 
 .card-img-bottom {
@@ -46,4 +41,12 @@ h6.card-subtitle {
     height: 500px;
     width: 100%;
     overflow-x: scroll;
+}
+
+@include media-breakpoint-down(md) {
+    .card.order-card {
+        max-width: 342px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
