--- a/frontend/src/scss/orderFormStyles.scss
+++ b/frontend/src/scss/orderFormStyles.scss
@@ -18,6 +18,13 @@ button.navbar-toggler:hover {
     max-width: 762px;
 }
 
+.scrollView {
+    height: 500px;
+    width: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 #submitButton {
     max-width: 110px;
 }
