Complete vinylize card

--- a/frontend/src/scss/orderFormStyles.scss
+++ b/frontend/src/scss/orderFormStyles.scss
@@ -18,12 +18,12 @@ button.navbar-toggler:hover {
     max-width: 762px;
 }
 
-.scrollView {
-    height: 500px;
-    width: 100%;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
+// .scrollView {
+//     height: 550px;
+//     width: 100%;
+//     overflow-y: auto;
+//     overflow-x: hidden;
+// }
 
 #submitButton {
     max-width: 110px;
