--- a/frontend/src/scss/designFormStyles.scss
+++ b/frontend/src/scss/designFormStyles.scss
@@ -22,6 +22,21 @@ h6+button {
     width: 75px;
 }
 
-#imageButton {
-    width: 125px;
+input {
+    max-width: 700px;
 }
+
+select {
+    max-width: 700px;
+}
+
+// #showVinylize {
+//     display: none;
+// }
+
+// .scrollView {
+//     height: 100%;
+//     width: 100%;
+//     overflow-y: auto;
+//     overflow-x: hidden;
+// }
