Initial Garment Detail Table
Table looks great on Desktop. Unusable on mobile. Most likely going to need to reduce the number of columns and have the details displayed in a modal.

--- a/frontend/src/scss/designFormStyles.scss
+++ b/frontend/src/scss/designFormStyles.scss
@@ -30,6 +30,10 @@ select {
     max-width: 700px;
 }
 
+#showGarment table th:not(:first-of-type) {
+    width: 19%;
+}
+
 // #showVinylize {
 //     display: none;
 // }
