--- a/frontend/src/scss/designFormStyles.scss
+++ b/frontend/src/scss/designFormStyles.scss
@@ -30,8 +30,16 @@ select {
     max-width: 700px;
 }
 
-#showGarment table th:not(:first-of-type) {
-    width: 19%;
+table th:not(:first-of-type) {
+    width: 22%;
+}
+
+table th:first-of-type {
+    border-right: 2px solid $dark;
+}
+
+.garmentDetailButton {
+    width: 5rem;
 }
 
 // #showVinylize {
