--- a/frontend/src/scss/designFormStyles.scss
+++ b/frontend/src/scss/designFormStyles.scss
@@ -45,6 +45,10 @@ table th:first-of-type {
     width: 5rem;
 }
 
+.modal-footer {
+    justify-content: space-evenly;
+}
+
 
 // IDs
 #embroideryTable {
